--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
     <p class="info">I Am a web developer</p>
 </div>
 <div class="image">
-<img src="IMAGES/user1.png"    alt="">
+<img src="Images/user1.png"    alt="">
 </div>
 </section>
 <!---home sec end-->
@@ -48,7 +48,7 @@
 <h1 class="heading">About <span>me</span></h1>
 <div class="row-1">
     <div class="image">
-        <img src="IMAGES/abhi-pc.jpeg"  alt="">
+        <img src="Images/abhi-pc.jpeg"  alt="">
     </div>
     <div class="content">
         <h3>My name is abhiram & i'm web developer</h3>
@@ -162,7 +162,7 @@
             <h1 class="sub-title">My<span> Portfolio </span></h1>
             <div class="work-list">
              <div class="work">
-                <img src="IMAGES/task_app_banner.png">
+                <img src="Images/task_app_banner.png">
                 <div class="layer">
                     <h2>Task managing App</h2>
                     <p style="color: rgb(240, 237, 243); font-size: 12px;">Task Managing App was created using ReactJS which allows user to manage their tasks.</p>
@@ -170,7 +170,7 @@
                 </div>
              </div>
              <div class="work">
-                <img src="IMAGES/Rock.png">
+                <img src="Images/Rock.png">
                 <div class="layer">
                     <h2>Rock Paper Sciccor</h2>
                     <p style="color: rgb(240, 244, 245); font-size: 12px;">Rock Paper Scissor is an user friendly game developed using ReactJS</p>
